--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
-    "mongoose": "^4.12.3"
+    "lodash": "^4.17.4",
+    "mongoose": "^4.12.3",
+    "mongoose-unique-validator": "^1.0.6"
   }
 }
