Reset password, forgot password, validate token requests created, insecure reset password creation

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 MONGODB_URL=mongodb://localhost/bookworm
 JWT_SECRET=secretkeyhere
+HOST=http://localhost:3002
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=c41e38f3dcf8ea
+EMAIL_PASS=215514d54693ea
