--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.12.3",
-    "mongoose-unique-validator": "^1.0.6"
+    "mongoose-unique-validator": "^1.0.6",
+    "nodemailer": "^4.2.0"
   }
 }
